syntax = "proto3";

package helloworld;

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayNothing (HelloRequest) returns (NothingReply) {}
  rpc RememberSomething (RememberRequest) returns (NothingReply) {}
  rpc AskSomething (RememberRequest) returns (AskResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The response message containing the greetings
message NothingReply {
  string message = 1;
}

// The request message containing the user's name.
message RememberRequest {
  string thing = 1;
}

// The request message containing the user's name.
message AskRequest {
  string message = 1;
}

// The request message containing the user's name.
message AskResponse {
  string message = 1;
}
